add link for blog website

--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
 <!--box3-box3-box3-bo3x3-->
             <div class="main--cont--colboxes">
                 <div  class="colboxes--cards">
-                    <a target="_blank" href="https://kaonykampus.github.io/Poemario/">
+                    <a target="_blank" href="https://kaonykampus.github.io/Blog-desarrollo-software/">
                         <img class="cards--pic" src="./assets/blog3.png" alt="">
                     </a>
                     <h3 class="cards-tittle">Blog desarrollo software</h3>
