--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 
                 <p class="main--paragraph">
                     Hey! This is David, a fullstack-software student.
-                    I manage Javascript, Java, HTML and CSS and have experience width
+                    I manage Javascript, Java, HTML and CSS and have experience with
                     React and Spring as framenworks. Let's get in touch.
                 </p>
                 
